Test added + exceptions